--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
         git:
           uri: https://github.com/song-hm/config-repo
           username: song-hm
-          password: fms7786286828
+          password: XXXXXXX
           basedir: D:/Program/git/springcloud-sell/basedir
   rabbitmq:
     host: 192.168.25.132
